--- a/data/raw/gis/regionalization/human_todo/paper_7.yaml
+++ b/data/raw/gis/regionalization/human_todo/paper_7.yaml
@@ -109,57 +109,57 @@ blocks:
   citations:
   - marker: (Solow, 1957; Solow, 1956)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (Hidalgo et al., 2007)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (see e.g. Krugman, 1991)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (Jacobs, 2016)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (Hidalgo et al., 2007; Neffke et al., 2011; Hausmann and Hidalgo, 2011; Hausmann et al., 2014)
-    intent_label: Prior Methods
-    topic_label: Alternative names
+    intent_label: Domain Overview
+    topic_label: Problem formulations and objectives
   - marker: Hidalgo et al. (2007)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: Hausmann and Hidalgo (2011)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: Hausmann et al. (2014)
     intent_label: Importance of Problem
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: Diodato et al., 2018
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: Rosenthal and Strange, 2004
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (Martin and Sunley, 1996)
     intent_label: Research Gap
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (De Groot et al., 2016)
     intent_label: Research Gap
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (see Neffke et al., 2011)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (Neffke et al., 2011)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (Jung and López-Bazo, 2017)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (see e.g. Caragliu and Nijkamp, 2016)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: Duque et al. (2011)
     intent_label: Prior Methods
     topic_label: p-regions formulations
   - marker: (Cliff et al., 1975; Keane, 1975)
-    intent_label: Importance of Problem
+    intent_label: Problem Formulation
     topic_label: p-regions formulations
 - block_id: 2
   content: 'The main ideas of this paper are built upon three theoretical bases: (1) complexity theory of Hausmann and Hidalgo,
@@ -320,70 +320,70 @@ blocks:
   citations:
   - marker: Hidalgo et al. (2007)
     intent_label: Algorithm/Principle Adoption
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: Hausmann and Hidalgo (2011)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: Hausmann et al. (2014)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: Duque et al. (2011)
     intent_label: Algorithm/Principle Adoption
     topic_label: p-regions formulations
   - marker: (see Hausmann and Hidalgo, 2011)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: Hausmann and Hidalgo, 2011
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: (see Hausmann et al., 2019)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: (see Neffke and Henning, 2013; Boschma, 2017)
     intent_label: Research Gap
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: Neffke et al. (2011)
-    intent_label: Domain Overview
-    topic_label: Alternative names
+    intent_label: Prior Methods
+    topic_label: regionalization
   - marker: OClery et al. (2019)
     intent_label: Prior Methods
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: Diodato et al. (2018)
     intent_label: Prior Methods
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: (Balassa, 1964, see also Section 3.1)
     intent_label: Algorithm/Principle Adoption
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: (see Hidalgo et al., 2007)
-    intent_label: Algorithm/Principle Adoption
-    topic_label: Alternative names
+    intent_label: Domain Overview
+    topic_label: regionalization
   - marker: (Hidalgo et al., 2007; Alshamsi et al., 2018; O’Clery et al., 2018)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: Schumpeter (1939)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: (Hidalgo et al., 2007; Hausmann and Hidalgo, 2011; Hausmann et al., 2014)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: (Hausmann and Neffke, 2019; Neffke et al., 2011)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: (OClery et al., 2019; Hausmann et al., 2019)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: (Bustos et al., 2012; OClery et al., 2019; Diodato et al., 2018)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: (see also O’Clery et al., 2018)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: regionalization
   - marker: (see e.g. Fischer, 1980; Duque et al., 2007)
-    intent_label: Domain Overview
-    topic_label: Alternative names
+    intent_label: Prior Methods
+    topic_label: Problem formulations and objectives
   - marker: (Fischer, 1980)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (Garfin kel and Nemhauser, 1970; Zoltners and Sinha, 1983)
     intent_label: Prior Methods
     topic_label: Exact optimization models
@@ -611,29 +611,29 @@ blocks:
     Z(S_p) = W1 F_T(S_p) + W2 S_T(S_p) (7)'
   citations:
   - marker: Hausmann and Hidalgo (2011)
-    intent_label: Problem Formulation
-    topic_label: Alternative names
+    intent_label: Domain Overview
+    topic_label: Problem formulations and objectives
   - marker: Hausmann et al. (2014)
     intent_label: Algorithm/Principle Adoption
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (Hausmann et al., 2014; Hidalgo et al., 2007)
-    intent_label: Algorithm/Principle Adoption
-    topic_label: Alternative names
+    intent_label: Domain Overview
+    topic_label: Problem formulations and objectives
   - marker: (Hausmann et al., 2014)
     intent_label: Algorithm/Principle Adoption
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (Balassa, 1964)
     intent_label: Algorithm/Principle Adoption
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (see Alshamsi et al., 2018)
     intent_label: Algorithm/Principle Adoption
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: Alshamsi et al. (2018)
     intent_label: Algorithm/Principle Adoption
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
   - marker: (see e.g. the definition of the clustering coefficient in Barabási et al., 2016)
     intent_label: Domain Overview
-    topic_label: Alternative names
+    topic_label: Problem formulations and objectives
 - block_id: 5
   content: 'Let I = {1, · · · , n} be the set of areas of a country with n areas and let p ∈ {2, · · · , n − 1} be the prescribed
     number of regions. Let Π be the set of feasible 𝑝-regionalizations given by contiguous partitions of I, i.e., collections
@@ -878,14 +878,14 @@ blocks:
     Therefore, we have that α = ln(2) / ln(M / R_av).'
   citations:
   - marker: Hidalgo et al. (2007)
-    intent_label: Hyperparameter Utilization
-    topic_label: Alternative names
+    intent_label: Algorithm/Principle Adoption
+    topic_label: Algorithms without explicit spatial contiguity constraint
   - marker: (Duque et al., 2012)
     intent_label: Algorithm/Principle Adoption
     topic_label: max-p regions formulations
   - marker: Krugman (1991)
     intent_label: Result Comparison
-    topic_label: Alternative names
+    topic_label: Algorithms without explicit spatial contiguity constraint
   - marker: (Blondel et al., 2008)
     intent_label: Algorithm/Principle Adoption
     topic_label: Algorithms without explicit spatial contiguity constraint
@@ -997,7 +997,7 @@ blocks:
   citations:
   - marker: (2018)
     intent_label: Algorithm/Principle Adoption
-    topic_label: Alternative names
+    topic_label: Learning-based methods
 - block_id: 12
   content: 'In this paper we introduced a new member of the 𝑝-regions clustering methods called the 𝑝-Innovation Ecosystems
     (p-IE) model. This model adds a new layer of complexity into the set of 𝑝-regions models incorporating an underlying network
@@ -1044,4 +1044,4 @@ blocks:
   citations:
   - marker: Hausmann and Hidalgo
     intent_label: Algorithm/Principle Adoption
-    topic_label: Alternative names
+    topic_label: Heterogeneity objective functions
