update AIE surveys

--- a/data/raw/gis/regionalization/human_todo/paper_5.yaml
+++ b/data/raw/gis/regionalization/human_todo/paper_5.yaml
@@ -229,7 +229,7 @@ blocks:
     topic_label: max-p regions formulations
   - marker: '[21]'
     intent_label: Prior Methods
-    topic_label: max-p regions formulations
+    topic_label: Enriched aggregate constraints
   - marker: '[11]'
     intent_label: Prior Methods
     topic_label: Multiobjective compactness–homogeneity clustering
@@ -274,10 +274,10 @@ blocks:
     topic_label: Compactness-driven location–allocation approaches
   - marker: '[20]'
     intent_label: Prior Methods
-    topic_label: max-p regions formulations
+    topic_label: Enriched aggregate constraints
   - marker: '[47]'
     intent_label: Prior Methods
-    topic_label: max-p regions formulations
+    topic_label: Enriched aggregate constraints
   - marker: '[14]'
     intent_label: Prior Methods
     topic_label: Multiobjective compactness–homogeneity clustering
