--- a/data/raw/gis/regionalization/human_todo/paper_6.yaml
+++ b/data/raw/gis/regionalization/human_todo/paper_6.yaml
@@ -135,7 +135,7 @@ blocks:
   citations:
   - marker: '[1]'
     intent_label: Prospective Application
-    topic_label: Enriched aggregate constraints
+    topic_label: regionalization
   - marker: '[2]'
     intent_label: Prospective Application
     topic_label: regionalization
@@ -186,7 +186,7 @@ blocks:
     topic_label: max-p regions formulations
   - marker: '[20]'
     intent_label: Research Gap
-    topic_label: Enriched aggregate constraints
+    topic_label: max-p regions formulations
   - marker: '[21]'
     intent_label: Research Gap
     topic_label: Exact optimization models
