update citation intent

--- a/data/raw/gis/climate/human_todo/paper_1.yaml
+++ b/data/raw/gis/climate/human_todo/paper_1.yaml
@@ -101,7 +101,7 @@ blocks:
     intent_label: Research Gap
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[32]'
-    intent_label: Prior Methods
+    intent_label: Prospective Application
     topic_label: Foundation models and generative architectures
   - marker: '[35]'
     intent_label: Prior Methods
@@ -190,7 +190,7 @@ blocks:
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[32]'
     intent_label: Prior Methods
-    topic_label: Foundation models and generative architectures
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[39]'
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
@@ -339,7 +339,7 @@ blocks:
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[31]'
-    intent_label: Prior Methods
+    intent_label: Algorithm/Principle Adoption
     topic_label: Spatio-temporal forecasting and nowcasting
 - block_id: 6
   content: We instantiate the framework in Section 3.1 with a simple Transformer [45]-based architecture. Due to the similarity
@@ -449,7 +449,7 @@ blocks:
   citations:
   - marker: '[17]'
     intent_label: Resource Utilization
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[41]'
     intent_label: Benchmark Utilization
     topic_label: Spatio-temporal forecasting and nowcasting
@@ -587,7 +587,7 @@ blocks:
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[28]'
     intent_label: Prior Methods
-    topic_label: Foundation models and generative architectures
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[33]'
     intent_label: Prior Methods
     topic_label: Foundation models and generative architectures
