--- a/data/raw/gis/climate/human_todo/paper_10.yaml
+++ b/data/raw/gis/climate/human_todo/paper_10.yaml
@@ -87,10 +87,10 @@ blocks:
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[14]'
     intent_label: Domain Overview
-    topic_label: Downscaling, bias correction, and data assimilation
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[15]'
     intent_label: Domain Overview
-    topic_label: Downscaling, bias correction, and data assimilation
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[19]'
     intent_label: Model/Architecture Adoption
     topic_label: Foundation models and generative architectures
@@ -98,13 +98,13 @@ blocks:
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[27]'
-    intent_label: Importance of Problem
+    intent_label: Domain Overview
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[28]'
-    intent_label: Importance of Problem
+    intent_label: Domain Overview
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[31]'
-    intent_label: Benchmark Utilization
+    intent_label: Research Gap
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[33]'
     intent_label: Prior Methods
@@ -114,10 +114,10 @@ blocks:
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[39]'
     intent_label: Domain Overview
-    topic_label: Downscaling, bias correction, and data assimilation
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[40]'
     intent_label: Domain Overview
-    topic_label: Downscaling, bias correction, and data assimilation
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[43]'
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
@@ -128,7 +128,7 @@ blocks:
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[49]'
-    intent_label: Result Comparison
+    intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[50]'
     intent_label: Prior Methods
@@ -429,7 +429,7 @@ blocks:
   citations:
   - marker: '[15]'
     intent_label: Resource Utilization
-    topic_label: Downscaling, bias correction, and data assimilation
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[31]'
     intent_label: Setting/Protocal Adoption
     topic_label: Spatio-temporal forecasting and nowcasting
@@ -492,13 +492,13 @@ blocks:
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[32]'
     intent_label: Result Comparison
-    topic_label: Foundation models and generative architectures
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[33]'
     intent_label: Result Comparison
-    topic_label: Foundation models and generative architectures
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[37]'
     intent_label: Result Comparison
-    topic_label: Foundation models and generative architectures
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[42]'
     intent_label: Result Comparison
     topic_label: Spatio-temporal forecasting and nowcasting
