--- a/data/raw/gis/climate/human_todo/paper_4.yaml
+++ b/data/raw/gis/climate/human_todo/paper_4.yaml
@@ -87,7 +87,7 @@ blocks:
     intent_label: Research Gap
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[22]'
-    intent_label: Domain Overview
+    intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[32]'
     intent_label: Research Gap
@@ -102,10 +102,10 @@ blocks:
     intent_label: Model/Architecture Adoption
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[47]'
-    intent_label: Domain Overview
+    intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[50]'
-    intent_label: Algorithm/Principle Adoption
+    intent_label: Domain Overview
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[53]'
     intent_label: Research Gap
@@ -144,13 +144,13 @@ blocks:
     laws to generalize to finer-grained time scales beyond the training datasets.'
   citations:
   - marker: '[2]'
-    intent_label: Prior Methods
+    intent_label: Domain Overview
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[3]'
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[4]'
-    intent_label: Prior Methods
+    intent_label: Domain Overview
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[5]'
     intent_label: Prior Methods
@@ -181,7 +181,7 @@ blocks:
     topic_label: Foundation models and generative architectures
   - marker: '[21]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Foundation models and generative architectures
   - marker: '[29]'
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
@@ -219,20 +219,20 @@ blocks:
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[54]'
-    intent_label: Prior Methods
+    intent_label: Domain Overview
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[55]'
-    intent_label: Prior Methods
+    intent_label: Domain Overview
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[57]'
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[59]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Foundation models and generative architectures
   - marker: '[60]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Foundation models and generative architectures
   - marker: '[61]'
     intent_label: Prior Methods
     topic_label: Foundation models and generative architectures
@@ -360,7 +360,7 @@ blocks:
     through Kp and Mp.'
   citations:
   - marker: '[25]'
-    intent_label: Resource Utilization
+    intent_label: Algorithm/Principle Adoption
     topic_label: Spatio-temporal forecasting and nowcasting
 - block_id: 7
   content: 'HybridBlock is a module that combines physics and AI. Firstly, it employs neural networks to address the issue
@@ -447,7 +447,7 @@ blocks:
   citations:
   - marker: '[42]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Foundation models and generative architectures
 - block_id: 11
   content: 'Dataset. We use WeatherBench [47] as our training dataset, whose time resolution is tdata = 1h and spatial resolution
     is 128 × 256. The dataset spanning from 1980 to 2015 serves as training set, while the data of 2017 is the validation
@@ -611,7 +611,7 @@ blocks:
   citations:
   - marker: '[23]'
     intent_label: Domain Overview
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Foundation models and generative architectures
   - marker: '[39]'
     intent_label: Result Comparison
     topic_label: Foundation models and generative architectures
