--- a/data/raw/gis/climate/human_todo/paper_8.yaml
+++ b/data/raw/gis/climate/human_todo/paper_8.yaml
@@ -80,19 +80,19 @@ blocks:
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[7]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Climate Prediction and Data-Driven Modeling
   - marker: '[8]'
     intent_label: Research Gap
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[12]'
     intent_label: Importance of Problem
-    topic_label: Food security, health, and disaster response
+    topic_label: Ecosystems and infrastructure resilience
   - marker: '[13]'
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[14]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Climate Prediction and Data-Driven Modeling
   - marker: '[17]'
     intent_label: Research Gap
     topic_label: Spatio-temporal forecasting and nowcasting
@@ -110,16 +110,16 @@ blocks:
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[33]'
     intent_label: Importance of Problem
-    topic_label: Food security, health, and disaster response
+    topic_label: Ecosystems and infrastructure resilience
   - marker: '[34]'
     intent_label: Research Gap
     topic_label: Climate Prediction and Data-Driven Modeling
   - marker: '[35]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Climate Prediction and Data-Driven Modeling
   - marker: '[36]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Climate Prediction and Data-Driven Modeling
   - marker: '[37]'
     intent_label: Research Gap
     topic_label: Spatio-temporal forecasting and nowcasting
@@ -134,16 +134,16 @@ blocks:
     topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[43]'
     intent_label: Importance of Problem
-    topic_label: Food security, health, and disaster response
+    topic_label: Ecosystems and infrastructure resilience
   - marker: '[44]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Climate Prediction and Data-Driven Modeling
   - marker: '[46]'
     intent_label: Importance of Problem
-    topic_label: Food security, health, and disaster response
+    topic_label: Ecosystems and infrastructure resilience
   - marker: '[47]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Climate Prediction and Data-Driven Modeling
   - marker: '[49]'
     intent_label: Research Gap
     topic_label: Downscaling, bias correction, and data assimilation
@@ -158,7 +158,7 @@ blocks:
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[59]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Climate Prediction and Data-Driven Modeling
   - marker: '[61]'
     intent_label: Research Gap
     topic_label: Food security, health, and disaster response
@@ -173,7 +173,7 @@ blocks:
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[67]'
     intent_label: Importance of Problem
-    topic_label: Food security, health, and disaster response
+    topic_label: Ecosystems and infrastructure resilience
   - marker: '[68]'
     intent_label: Research Gap
     topic_label: Downscaling, bias correction, and data assimilation
@@ -182,13 +182,13 @@ blocks:
     topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[74]'
     intent_label: Importance of Problem
-    topic_label: Food security, health, and disaster response
+    topic_label: Ecosystems and infrastructure resilience
   - marker: '[75]'
     intent_label: Research Gap
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[77]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Climate Prediction and Data-Driven Modeling
   - marker: '[80]'
     intent_label: Research Gap
     topic_label: Spatio-temporal forecasting and nowcasting
@@ -206,7 +206,7 @@ blocks:
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[89]'
     intent_label: Prior Methods
-    topic_label: Spatio-temporal forecasting and nowcasting
+    topic_label: Climate Prediction and Data-Driven Modeling
   - marker: '[90]'
     intent_label: Research Gap
     topic_label: Spatio-temporal forecasting and nowcasting
@@ -239,16 +239,16 @@ blocks:
     ML to challenging weather and climate modeling tasks like forecasting, downscaling, and climate projection.'
   citations:
   - marker: '[6]'
-    intent_label: Prior Methods
+    intent_label: Research Gap
     topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[9]'
     intent_label: Prior Methods
     topic_label: Climate Prediction and Data-Driven Modeling
   - marker: '[10]'
-    intent_label: Prior Methods
+    intent_label: Research Gap
     topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[11]'
-    intent_label: Prior Methods
+    intent_label: Research Gap
     topic_label: Climate Prediction and Data-Driven Modeling
   - marker: '[15]'
     intent_label: Prior Methods
@@ -257,7 +257,7 @@ blocks:
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[24]'
-    intent_label: Prior Methods
+    intent_label: Research Gap
     topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[45]'
     intent_label: Prior Methods
@@ -266,7 +266,7 @@ blocks:
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[55]'
-    intent_label: Prior Methods
+    intent_label: Research Gap
     topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[56]'
     intent_label: Prior Methods
@@ -290,7 +290,7 @@ blocks:
     intent_label: Prior Methods
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[79]'
-    intent_label: Prior Methods
+    intent_label: Research Gap
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[84]'
     intent_label: Prior Methods
@@ -324,7 +324,7 @@ blocks:
     carbon dioxide (CO 2), sulfur dioxide (SO 2), black carbon (BC), and methane (CH 4).'
   citations:
   - marker: '[84]'
-    intent_label: Benchmark Utilization
+    intent_label: Resource Utilization
     topic_label: Climate Prediction and Data-Driven Modeling
 - block_id: 5
   content: 'ERA5 is a commonly-used data source for training and benchmarking data-driven forecasting and downscaling methods
@@ -369,10 +369,10 @@ blocks:
     regrid ERA5 and CMIP6, we also provide a regridded version of raw PRISM data to 0.75 resolution.'
   citations:
   - marker: '[4]'
-    intent_label: Prior Methods
+    intent_label: Domain Overview
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[5]'
-    intent_label: Problem Formulation
+    intent_label: Setting/Protocal Adoption
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[19]'
     intent_label: Resource Utilization
@@ -381,16 +381,16 @@ blocks:
     intent_label: Resource Utilization
     topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[38]'
-    intent_label: Prior Methods
+    intent_label: Domain Overview
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[49]'
-    intent_label: Prior Methods
+    intent_label: Domain Overview
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[52]'
-    intent_label: Prior Methods
+    intent_label: Domain Overview
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[54]'
-    intent_label: Prior Methods
+    intent_label: Domain Overview
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[57]'
     intent_label: Resource Utilization
@@ -402,10 +402,10 @@ blocks:
     intent_label: Resource Utilization
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[71]'
-    intent_label: Benchmark Utilization
+    intent_label: Resource Utilization
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[83]'
-    intent_label: Problem Formulation
+    intent_label: Setting/Protocal Adoption
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[85]'
     intent_label: Domain Overview
@@ -441,10 +441,10 @@ blocks:
     topic_label: Foundation models and generative architectures
   - marker: '[27]'
     intent_label: Model/Architecture Adoption
-    topic_label: Foundation models and generative architectures
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[30]'
     intent_label: Prior Methods
-    topic_label: Foundation models and generative architectures
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[49]'
     intent_label: Prior Methods
     topic_label: Downscaling, bias correction, and data assimilation
@@ -459,25 +459,25 @@ blocks:
     topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[69]'
     intent_label: Model/Architecture Adoption
-    topic_label: Foundation models and generative architectures
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[72]'
     intent_label: Prior Methods
-    topic_label: Downscaling, bias correction, and data assimilation
+    topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[75]'
     intent_label: Prior Methods
-    topic_label: Foundation models and generative architectures
+    topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[80]'
     intent_label: Prior Methods
     topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[81]'
     intent_label: Prior Methods
-    topic_label: Foundation models and generative architectures
+    topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[86]'
     intent_label: Prior Methods
     topic_label: Downscaling, bias correction, and data assimilation
   - marker: '[87]'
     intent_label: Prior Methods
-    topic_label: Foundation models and generative architectures
+    topic_label: Downscaling, bias correction, and data assimilation
 - block_id: 7
   content: 'Forecasting metrics For deterministic forecasting, ClimateLearn provides metrics such as root mean square error
     (RMSE) and anomaly correlation coefficient (ACC), which measures how well model forecasts match ground truth anomalies.
@@ -609,7 +609,7 @@ blocks:
     For exact numbers and setup refer to Appendix C.3.'
   citations:
   - marker: '[4]'
-    intent_label: Setting/Protocal Adoption
+    intent_label: Problem Formulation
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[16]'
     intent_label: Result Comparison
@@ -624,7 +624,7 @@ blocks:
     intent_label: Resource Utilization
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[38]'
-    intent_label: Setting/Protocal Adoption
+    intent_label: Problem Formulation
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[42]'
     intent_label: Algorithm/Principle Adoption
@@ -639,7 +639,7 @@ blocks:
     intent_label: Result Comparison
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[63]'
-    intent_label: Prior Methods
+    intent_label: Result Comparison
     topic_label: Spatio-temporal forecasting and nowcasting
   - marker: '[69]'
     intent_label: Result Comparison
